--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -346,6 +346,54 @@ fieldset {
 legend {
   padding: 0;
 }
+.po{
+  font-weight: bold;
+  margin-left: 40px;
+  margin-top: 40px;
+  font-size: 20px;
+
+}
+
+.pn {
+  margin-left: 40px;
+  margin-top: 20px;
+  font-size: 17px;
+  background-color: rgb(212, 211, 211);
+  height: 39px;
+  width: 90%;
+  padding-left: 10px;
+  padding-top: 5px;
+}
+.pd {
+  margin-top: 30px;
+  margin-left: 40px;
+  background-color: rgb(212, 211, 211);
+  height: 39px;
+  width: 90%;
+  padding-left: 10px;
+  padding-top: 5px;
+}
+.pd-text {
+  margin-top: 10px;
+  font-size: 15px;
+  margin-left: 40px;
+  height: 39px;
+  width: 90%;
+}
+.pt {
+  margin-left: 40px;
+  margin-top: 30px;
+}
+
+.add-member{
+  border-radius: 5px;
+  padding: 0 10px;
+  height: 40px;
+  margin-left: 0;
+}
+
+.search-bar{
+}
 
 ol,
 ul,
