--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -380,9 +380,10 @@ legend {
   height: 39px;
   width: 90%;
 }
-.pt {
+.project-ticket-p {
   margin-left: 40px;
-  margin-top: 30px;
+  margin-top: 20px;
+  font-size: 20px;
 }
 
 .add-member{
@@ -392,7 +393,19 @@ legend {
   margin-left: 0;
 }
 
-.search-bar{
+.table-style {
+  margin-left: 40px !important;
+  margin-top: 50px;
+  width: 95%;
+}
+
+.tm-p {
+  margin-left: 40px;
+  margin-top: 40px;
+}
+.am-button {
+  margin-right: 20px;
+  margin-top: 40px;
 }
 
 ol,
